"ci/cd: added .env credentials"

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import yagmail"
+    "import yagmail\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def send_email(first_name, email, company_name, text):\n",
+    "    load_dotenv()\n",
+    "    email_id = os.getenv('email')\n",
+    "    password = os.getenv('passkey')\n",
+    "\n",
     "    # Create yagmail SMTP connection\n",
-    "    yag = yagmail.SMTP('naimishbbhuva@gmail.com', 'bbxp zutk dpxe ppeb')\n",
+    "    yag = yagmail.SMTP(email_id, password)\n",
     "\n",
     "    # Compose email\n",
     "    subject = f\"Seeking Summer Internship: Data Science Enthusiast\"\n",
@@ -51,21 +57,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done 63\n"
+      "done 1\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
     "\n",
-    "csv_data = pd.read_csv(\"data.csv\")\n",
+    "csv_data = pd.read_csv(\"check.csv\")\n",
     "\n",
     "process_text(\"file.txt\", csv_data)\n",
     "\n",
